--- a/server/sonar-web/src/main/less/components/menu.less
+++ b/server/sonar-web/src/main/less/components/menu.less
@@ -54,7 +54,7 @@
 
   .divider {
     height: 1px;
-    margin: 9px 0;
+    margin: 6px 0;
     overflow: hidden;
     background-color: @barBorderColor;
   }
